[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentpriv"
version = "0.1.1"
description = "sudo for AI agents - allow, deny, or ask before any tool runs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nichkej/agentpriv"

[tool.pytest.ini_options]
testpaths = ["tests"]
